tests/ui-vec/02-guard-outlives-vec.stderr
warning: variable does not need to be mutable
 --> tests/ui-vec/02-guard-outlives-vec.rs:4:9
  |
4 |     let mut guard;
  |         ----^^^^^
  |         |
  |         help: remove this `mut`
  |
  = note: `#[warn(unused_mut)]` on by default

error[E0597]: `vec` does not live long enough
  --> tests/ui-vec/02-guard-outlives-vec.rs:7:17
   |
 6 |         let mut vec = ReusableVec::<String>::default();
   |             ------- binding `vec` declared here
 7 |         guard = vec.recycle::<String>();
   |                 ^^^ borrowed value does not live long enough
 8 |         // `vec` is dropped at the end of this scope.
 9 |     }
   |     - `vec` dropped here while still borrowed
...
14 |     let _ = guard.len();
   |             ----- borrow later used here
